--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@ body
 }
 #bloc_page
 {
-    margin: 0;
-    padding: 0;
     margin-left: 3%;
     margin-right: 3%;
 }
@@ -189,6 +187,104 @@ header
     font-size: 12px;  
 }
 
+/* Hébergements Ville */
+
+#conthebergville
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px; 
+    width: 880px;
+    background-color: #f2f2f2;
+    border-radius: 15px;
+}
+
+.hebergements a
+{
+    color: black;
+    text-decoration: none;
+}
+
+.hebergements, .affplus
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+#hebergville
+{
+    margin-left: 25px;
+    margin-top: 40px;
+}
+
+.hebergfig
+{
+    width: 250px;
+    padding: 4px;
+    background-color: white;
+    border-radius: 20px;
+    margin: 0px;
+    box-shadow: 2px 1px 5px 2px rgb(209, 209, 209);
+}
+
+.hebergfig:hover
+{
+    background-color: #f3f8ff;
+    transform: scale(1.015);
+}
+.lienheberg
+{
+    border-radius: 20px;
+    margin: 10px; 
+}
+
+.lienheberg img
+{
+    width: 250px;
+    height: 120px;
+    border-radius: 20px 20px 0 0;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.figcaptionhebergement
+{
+    line-height: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px; 
+}
+
+.figcaptionhebergement i
+{
+    color: #0065fc;
+}
+
+.hebergprix
+{
+    font-weight: bold;
+}
+
+.hebergafficherplus
+{
+    margin-left: 25px;
+    margin-top: 30px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.affplus a
+{
+    color: black;
+    text-decoration: none;
+}
+
+.affplus a:hover
+{
+    color: #0065fc;
+}
+
 /* Footer */
 
 footer
@@ -196,8 +292,8 @@ footer
     background-color: #F2F2F2;
     flex-wrap: wrap;
     display: flex;
-    margin-left: -3%;
-    margin-right: -3%;
+    margin-left: -4%;
+    margin-right: -4%;
     margin-top: 20px;
     justify-content: flex-start;
     align-items: flex-start;
