--- a/style.css
+++ b/style.css
@@ -329,3 +329,10 @@ footer a:hover
     color: #0065fc;
     font-weight: bolder;
 }
+
+/* Site en construction */
+
+.fa-cogs
+{
+    font-size: 100px;
+}
