--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header
 }
 #sous_titre
 {
+    margin-top: -10px;
     font-size: 1em;
 }
 /* Navigation */
@@ -87,11 +88,13 @@ header
     border: none;
     margin: auto;
     overflow: auto;
+    border-collapse: collapse;
+    border: 2px solid #f2f2f2;
+    border-radius: 15px 15px 15px 15px;
 }
 #cadrelocalisation
 {
     width: 20px;
-    border: 2px solid #f2f2f2;
     font-size: 15px;
     background-color:  #F2F2F2;
     border-radius: 10px 0px 0px 10px;
@@ -104,15 +107,15 @@ header
 {
     display: inline;
     padding: 12px;
-    border: 2px solid #f2f2f2;
     width: 210px;
     font-size: 15px;
     font-weight: bold;
+    border: none;
 }
+
 #submitrecherche
 {
     width: 100px;
-    border: 2px solid #f2f2f2;
     font-size: 15px;
     font-weight: bold;
     background-color:  #F2F2F2;
@@ -122,6 +125,12 @@ header
     cursor: pointer;
     background-color: #0065fc;
     color: white;
+}
+
+#submitrecherche:hover
+{
+    background-color: #deebff;
+    color: #0065fc;
 }
 
 /* Filtres */
@@ -166,6 +175,12 @@ header
     width: 16px;
     text-align: center;
     cursor: pointer;
+}
+
+.filtre:hover i
+{
+    color: #deebff;
+    background-color: #0065FC;
 }
 
 #info
