--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face
 {
-    font-family: 'raleway';
+    font-family: "raleway";
     src: url('../fonts/Raleway-VariableFont_wght.ttf');
 }
 
@@ -10,12 +10,13 @@
 
 body
 {
-    font-family: 'raleway', 'sans-serif';
+    font-family: "raleway", "sans-serif";
 }
 #bloc_page
 {
-    margin-left: 10%;
-    margin-right: 10%;
+    max-width: 1440px;
+    margin: auto;
+    justify-content: center;
 }
 
 /* Header */
@@ -30,18 +31,7 @@ header
 .logo
 {
     float: left;
-    width: 150px 
-}
-
-#titre
-{
-    font-size: 2em;
-}
-
-#sous_titre
-{
-    margin-top: -10px;
-    font-size: 1em;
+    width: 150px;
 }
 
 /* Navigation */
@@ -88,7 +78,18 @@ header
     color: #0065FC;
 }
 
-/* Barre de recherche */
+/* Titres + Barre de recherche */
+
+#titre
+{
+    font-size: 2em;
+}
+
+#sous_titre
+{
+    margin-top: -10px;
+    font-size: 1em;
+}
 
 #search
 {
@@ -155,6 +156,11 @@ header
     font-weight: bold;
 }
 
+.retour_mobile
+{
+    display: none;
+}
+
 .filtre 
 {
     display: inline-block;
@@ -211,6 +217,12 @@ header
     width: 12px;
     margin-right: 15px;
     font-size: 12px;  
+}
+
+#info i:hover
+{
+    color: #deebff;
+    background-color: #0065FC;
 }
 
 /* Hébergements Ville */
@@ -523,8 +535,6 @@ header
 footer
 {
     background-color: #F2F2F2;
-    margin-left: -14%;
-    margin-right: -14%;
     margin-top: 20px;
     justify-content: flex-start;
     align-items: flex-start;
@@ -532,11 +542,12 @@ footer
 
 .contfooter
 {
+    max-width: 1440px;
     flex-wrap: wrap;
     display: flex;
-    justify-content: flex-start;
     align-items: flex-start;
-    margin-left: 9%;
+    justify-content: space-between;
+    margin: auto;
 }
 
 .footertitle
@@ -552,11 +563,6 @@ footer
     flex-direction: column;
     margin-top: 30px;
     margin-bottom: 30px;
-}
-
-#footernav1 ul, #footernav2 ul
-{
-    padding-right: 250px;
 }
 
 footer a
