--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,12 +11,17 @@
     margin: auto;
 }
 
+h3
+{
+    font-size: 1em;
+}
+
 /* Header + navigation */
 
 .logo
 {
     float: unset;
-    width: initial; 
+    width: 125px; 
 }
 
 header
@@ -65,7 +70,7 @@ header
 
 .headernav
 {
-    width: auto;
+    width: 100%;
     align-items: center;
 }
 
@@ -113,8 +118,9 @@ header
 {
     display: flex; 
     flex-direction: column;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: auto;
 }     
 
 #titre
@@ -125,25 +131,51 @@ header
 #sous_titre
 {
     font-size: 1em;
+    margin-bottom: 40px;
 }
 
 #search
 {
-    margin-top: 20px;
-    margin-left: unset;
+    width: 100%;
+    justify-content: space-between;
 }
+
+.boutonrecherche
+{
+    width: 30px;
+    border-radius: 15px 15px 15px 15px;
+}
+
+.boutonrecherche i
+{
+    display: unset;
+}
+
+#submitrecherche
+{
+    display: none;
+}
+
+#textederecherche
+{
+    width: 80%;
+    margin-right: -40px;
+}
+
 
 /* Filtres */
 
 #conteneurfiltre
 {
     margin-top: 40px;
+    margin-right: 20px;
 }
 
 #titrefiltre
 {
-    padding-left: 20px;
-
+    padding-left: 30px;
+    padding-bottom: 30px;
+    font-size: 1.2em;
 }
 
 .retour_mobile
@@ -159,4 +191,182 @@ header
 .filtre
 {
     margin-top: 10px;
+}
+
+#info
+{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+/* Les plus populaires */
+
+#hebergementvilleetpopulaire
+{
+    align-items: center;
+    flex-direction: column-reverse;
+    width: 100%;
+}
+
+#conthebergpop
+{
+    width: 100%;
+    border-radius: unset;
+    margin: unset;
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.hebergementspop
+{
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.lienhebergpop
+{
+    width: 90%;
+}
+
+#hebergpop
+{
+    padding-left: 22px;
+    padding-right: 5px;
+    margin-top: 40px;
+    margin-left: unset;
+    display: flex;
+    justify-content: space-between;
+}
+
+.figcaptionhebergementpop
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    width: auto;
+}
+
+.popfig
+{
+    margin-top: 20px;
+    margin-left: unset;
+    margin-right: unset;
+    width: 100%;
+}
+
+
+.popfig i
+{
+    margin-top: unset;
+}
+
+/* Hébergements Ville */
+
+#conthebergville
+{
+    background-color: unset;
+    width: 100%;
+    border-radius: unset;
+    margin: unset;
+    align-items: center;
+    padding-right: unset;
+    margin-right: 5px;
+}
+
+#hebergville
+{
+    width: 100%;
+    margin-left: unset;
+    padding-left: 10px;
+    padding-right: 5px;
+}
+
+#hebergements
+{
+    width: 100%;
+}
+
+.lienheberg
+{
+    width: 100%;
+}
+
+.hebergfig
+{
+    width: 100%;
+}
+
+.lienheberg img
+{
+    width: 100%;
+}
+
+.hebergafficherplus
+{
+    font-size: 1.2em;
+}
+
+.figcaptionhebergement
+{
+    width: 100%;
+}
+
+/* Activités */
+
+#titreactivités
+{
+    margin-left: 10px;
+}
+
+#contactivités
+{
+    width: 100%;
+    margin: auto;
+}
+
+.contimgact
+{
+    margin-left: unset;
+    margin-right: unset;
+    width: 100%;
+}
+
+.activitésfig1, .activitésfig2_3, .activitésfig1_2
+{
+    width: 100%;
+}
+
+.lienactivités
+{
+    width: 96%;
+}
+
+.figactivités2_3 img, .figactivités1_2 img, .figactivités img, .figactivités1_3 img
+{
+    width: unset;
+    height: unset;
+}
+
+.figmobile img
+{
+    width: 100%;
+    height: 100px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+/* Footer */
+
+footer
+{
+    margin-left: -12px;
+    margin-right: -12px;
 }
