--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,12 @@ header
     display: inline;
     padding: 12px;
     width: 210px;
-    font-size: 15px;
+    font-size: 100%;
     font-weight: bold;
     border: none;
 }
 
-#submitrecherche
+.boutonrecherche
 {
     width: 100px;
     font-size: 15px;
@@ -140,10 +140,15 @@ header
     color: white;
 }
 
-#submitrecherche:hover
+.boutonrecherche:hover
 {
     background-color: #deebff;
     color: #0065fc;
+}
+
+.boutonrecherche i
+{
+    display: none;
 }
 
 /* Filtres */
@@ -261,7 +266,7 @@ header
 
 #hebergville
 {
-    margin-left: 25px;
+    margin-left: 30px;
     margin-top: 40px;
 }
 
@@ -472,6 +477,13 @@ header
     font-weight: bold;
 }
 
+.activitésfig1
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;  
+}
+
 .figactivités img
 {
     width: 310px;
@@ -563,6 +575,7 @@ footer
     flex-direction: column;
     margin-top: 30px;
     margin-bottom: 30px;
+    padding-right: 40px;
 }
 
 footer a
