--- a/css/grandetablette.css
+++ b/css/grandetablette.css
@@ -166,7 +166,6 @@ h3
     height: 150px;
     min-width: 100px;
     width: 200px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -216,7 +215,7 @@ h3
     align-content: flex-start;
     width: 25%;
     height: auto;
-    margin: 0,1%;
+    margin: unset;
     padding-right: 50px;
 }
 
@@ -233,7 +232,6 @@ h3
     min-width: 100px;
     width: 100%;
     height: 150px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -302,7 +300,6 @@ h3
 {
     width: 100%;
     height: 100px;
-    -o-object-fit: cover;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
@@ -311,7 +308,6 @@ h3
 {
     width: 100%;
     height: 280px;
-    -o-object-fit: cover;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
