--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ header
     margin-left: -2px;
     margin-top: -2px;
     margin-bottom: -2px;
-    border: 1px solid #deebff;
+    border: 1px solid #cad7eb;
     width: 16px;
     text-align: center;
     cursor: pointer;
