--- a/css/tablette.css
+++ b/css/tablette.css
@@ -222,7 +222,7 @@ header
     align-content: flex-start;
     width: 95%;
     height: auto;
-    margin: 0,1%;
+    margin: unset;
     padding-right: 50px;
 }
 
@@ -268,7 +268,6 @@ header
     min-width: 200px;
     width: 400px;
     max-height: 180px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -317,7 +316,7 @@ header
     align-content: flex-start;
     width: 95%;
     height: auto;
-    margin: 0,1%;
+    margin: unset;
     padding-right: 50px;
 }
 
@@ -335,7 +334,6 @@ header
     min-width: 150px;
     width: 100%;
     max-height: 180px;
-    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -404,7 +402,6 @@ header
 {
     width: 100%;
     height: 100px;
-    -o-object-fit: cover;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
@@ -413,7 +410,6 @@ header
 {
     width: 100%;
     height: 280px;
-    -o-object-fit: cover;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
